@startuml

title __P6-MEDIADOR's Class Diagram__\n

  namespace es.ull.patrones {
    class Main {
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.app {
      class es.ull.patrones.app.App {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.ChatGUI {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.Dialog {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.DialogGroup {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.FirstFrame {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.GroupGUI {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.mediators {
      interface es.ull.patrones.mediators.IMediator {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.mediators {
      class es.ull.patrones.mediators.Mediator {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.users {
      abstract class es.ull.patrones.users.User {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.users {
      class es.ull.patrones.users.UserConcrete {
      }
    }
  }
  

  es.ull.patrones.gui.ChatGUI -up-|> javax.swing.JFrame
  es.ull.patrones.gui.ChatGUI o-- es.ull.patrones.mediators.IMediator : mediator
  es.ull.patrones.gui.ChatGUI o-- es.ull.patrones.users.User : sender
  es.ull.patrones.gui.ChatGUI o-- es.ull.patrones.users.User : userFinal
  es.ull.patrones.gui.Dialog -up-|> javax.swing.JDialog
  es.ull.patrones.gui.Dialog o-- es.ull.patrones.users.UserConcrete : ana
  es.ull.patrones.gui.Dialog o-- es.ull.patrones.users.UserConcrete : andrea
  es.ull.patrones.gui.Dialog o-- es.ull.patrones.users.UserConcrete : celeste
  es.ull.patrones.gui.Dialog o-- es.ull.patrones.users.UserConcrete : daniel
  es.ull.patrones.gui.Dialog o-- es.ull.patrones.mediators.IMediator : mediator
  es.ull.patrones.gui.DialogGroup -up-|> javax.swing.JDialog
  es.ull.patrones.gui.DialogGroup o-- es.ull.patrones.users.UserConcrete : ana
  es.ull.patrones.gui.DialogGroup o-- es.ull.patrones.users.UserConcrete : andrea
  es.ull.patrones.gui.DialogGroup o-- es.ull.patrones.users.UserConcrete : celeste
  es.ull.patrones.gui.DialogGroup o-- es.ull.patrones.users.UserConcrete : daniel
  es.ull.patrones.gui.DialogGroup o-- es.ull.patrones.mediators.IMediator : mediator
  es.ull.patrones.gui.FirstFrame -up-|> javax.swing.JFrame
  es.ull.patrones.gui.GroupGUI -up-|> javax.swing.JFrame
  es.ull.patrones.gui.GroupGUI o-- es.ull.patrones.mediators.IMediator : mediator
  es.ull.patrones.gui.GroupGUI o-- es.ull.patrones.users.User : sender
  es.ull.patrones.mediators.Mediator .up.|> es.ull.patrones.mediators.IMediator
  es.ull.patrones.users.User o-- es.ull.patrones.mediators.IMediator : mediator
  es.ull.patrones.users.UserConcrete -up-|> es.ull.patrones.users.User


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
